--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
     "spryker/category": "^1.0.0",
     "spryker/collector": "^1.0.0",
     "spryker/kernel": "^1.0.0",
-    "spryker/storage": "^1.0.0"
+    "spryker/storage": "^1.0.0",
+    "spryker/external": "^1.0.0"
   },
   "require-dev": {},
   "description": "category exporter bundle",
   "license": "proprietary",
   "minimum-stability": "dev",
+  "prefer-stable": true,
   "extra": {
     "branch-alias": {
       "dev-master": "1.0.x-dev"
