--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "spryker/category": "^1.0.0",
     "spryker/collector": "^1.0.0",
     "spryker/kernel": "^1.0.0",
-    "spryker/storage": "^1.0.0",
-    "spryker/external": "^1.0.0"
+    "spryker/storage": "^1.0.0"
   },
   "require-dev": {},
   "description": "category exporter bundle",
