--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     }
   },
   "require": {
-    "spryker/cart": "^0.20.0",
-    "spryker/category": "^0.20.0",
-    "spryker/collector": "^0.20.0",
-    "spryker/kernel": "^0.20.0",
-    "spryker/storage": "^0.20.0"
+    "spryker/cart": "^1.0.0-RC1",
+    "spryker/category": "^1.0.0-RC1",
+    "spryker/collector": "^1.0.0-RC1",
+    "spryker/kernel": "^1.0.0-RC1",
+    "spryker/storage": "^1.0.0-RC1"
   },
   "description": "category exporter bundle",
   "license": "proprietary",
@@ -23,7 +23,7 @@
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-master": "0.20.x-dev"
+      "dev-master": "1.0.x-dev"
     }
   }
 }
