--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
     }
   },
   "require": {
-    "spryker/cart": "^1.0.0-RC2",
-    "spryker/category": "^1.0.0-RC2",
-    "spryker/collector": "^1.0.0-RC2",
-    "spryker/kernel": "^1.0.0-RC2",
-    "spryker/storage": "^1.0.0-RC2"
+    "spryker/cart": "^2.0.0-RC1",
+    "spryker/category": "^2.0.0-RC1",
+    "spryker/collector": "^2.0.0-RC1",
+    "spryker/kernel": "^2.0.0-RC1",
+    "spryker/storage": "^2.0.0-RC1"
   },
   "description": "category exporter bundle",
   "license": "proprietary",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
