--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "description": "category exporter bundle",
   "license": "proprietary",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
